workspaces/optic-engine/src/commands/snapshots/optic_engine__commands__shape__test__can_handle_set_field_shape_command__new_events.snap
---
source: workspaces/optic-engine-native/src/commands/shape.rs
expression: new_events
---
[
    FieldShapeSet(
        FieldShapeSet {
            shape_descriptor: FieldShapeFromShape(
                FieldShapeFromShape {
                    field_id: "field_1",
                    shape_id: "shape_3",
                },
            ),
            event_context: None,
        },
    ),
]
